Some more refactoring.

--- a/examples/classic.html
+++ b/examples/classic.html
@@ -11,6 +11,8 @@
         windowingInitialize();
     }
 </script>
+<script src="js/ajax.js"></script>
+<script src="js/classic.js"></script>
 <script src="js/gameboy.js"></script>
 
 <div id="GameBoy" class="window">
