Making progress on new frontend.

--- a/examples/classic.html
+++ b/examples/classic.html
@@ -12,6 +12,7 @@
     }
 </script>
 <script src="js/ajax.js"></script>
+<script src="js/windowStack.js"></script>
 <script src="js/classic.js"></script>
 <script src="js/gameboy.js"></script>
 
